# robot_detect

./: README.md
tensorrtx/yolov5/: CMakeLists.txt  yolov5.cpp  yolov5_trt.cpp
tensorrtx/yolov5/build_cp/: CMakeCache.txt  Makefile  yolov5  yolov5_det  yolov5_trt
yolov5_detect/: train.py
